--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </a>
             </li> -->
             <li class="nav-item">
-                <a class="nav-link" href="https://wa.me/+917358616730?text=Hi%20Akshay%20%26%20kaviya,%20Congratulations!%20🥳🎉👏🤝👍🌷❤️" target="_blank">
+                <a class="nav-link" href="https://wa.me/+917010594934?text=Hi%20Arvinth%20%26%Aarthi,%20Congratulations!%20🥳🎉👏🤝👍🌷❤️" target="_blank">
                     <i class="fa-brands fa-whatsapp"></i>
                     <span class="d-block" style="font-size: 0.7rem;">Wish</span>
                 </a>
@@ -149,7 +149,7 @@
         </div>
       </div>
       <!-- Decorative SVG curve divider with smooth dark blend -->
-      <div class="section-divider fade-in-on-scroll">
+      <!-- <div class="section-divider fade-in-on-scroll">
         <svg viewBox="0 0 1440 220" width="100%" height="220" style="display:block; margin-bottom:-2px;" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="curveSiteGradient" x1="0" y1="0" x2="0" y2="1">
@@ -160,7 +160,7 @@
           </defs>
           <path d="M0,60 C360,120 1080,0 1440,60 L1440,220 L0,220 Z" fill="url(#curveSiteGradient)"/>
         </svg>
-      </div>
+      </div> -->
       <img
         src="./assets/img/flower-with-light-left.png"
         alt="bg"
