--- a/index.html
+++ b/index.html
@@ -40,344 +40,7 @@
   </head>
 
   <body>
-    <!-- <button type="button" id="button-music" 
-        style=" bottom: 20px; right: 20px;" 
-        class="btn btn-sm rounded-circle audio-icon btn-music position-fixed border" 
-        data-url="./assets/mp3/song.mp3">
-        <i class="fa fa-volume-up spin-button"></i>
-    </button> -->
-
-    <!--=============== sakura falling ===============-->
-    <div class="sakura-falling"></div>
-    <!-- <img src="assets/img/right.png" alt="image-top-right" class="top-right-decoration">
-   <img src="assets/img/right.png" alt="image-top-left" class="top-left-decoration"> -->
-
-    <!-- <section id="home" class="bg-light position-relative overflow-hidden p-0 m-0">
-    
-    </section> -->
-
-    <div class="wrap" style="width: 100%">
-      <img
-        src="./assets/img/flower.png"
-        alt="bg"
-        class="position-absolute top-0 start-50 translate-middle-x img-fluid home_txt"
-        style="width: 250px; height: 50px"
-      />
-      <img
-        src="./assets/img/flower-with-light-left.png"
-        alt="bg"
-        class="position-absolute bottom-0 start-0 img-fluid home__left"
-        style="width: 100px; height: 400px"
-      />
-      <img
-        src="./assets/img/flower-with-light-right.png"
-        alt="bg"
-        class="position-absolute bottom-0 end-0 img-fluid home__bottom"
-        style="width: 100px; height: 400px"
-      />
-
-      <div style="width: 100%;margin-top: 40px;">
-        <div>
-          <div class="position-relative p-2">
-            <div
-              class="text-center"
-              style="
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              "
-            >
-              <h1
-                class="font-esthetic my-4 fw-medium home_txt"
-                style="font-size: 1.5rem; width: 210px"
-              >
-                You are invited to the wedding
-              </h1>
-            </div>
-
-            <h2 class="font-esthetic rahul" style="font-size: 2.5rem">Arvinth</h2>
-            <h2 class="font-esthetic home_txt" style="font-size: 2.5rem">&amp;</h2>
-            <h2 class="font-esthetic pranjal" style="font-size: 2.5rem">Aarthi</h2>
-            <img
-              src="./assets/img/couple.png"
-              alt="bg"
-              style="width: 200px; height: 200px"
-              class="home_txt"
-            />
-            <p class="my-2 home_txt" style="font-size: 1.25rem">
-              Monday, 20 April 2026
-            </p>
-
-            <a
-              class="btn btn-outline-light btn-sm shadow rounded-pill px-3 home_txt text-decoration-none"
-              target="_blank"
-              href="https://calendar.google.com/calendar/u/0/r/eventedit?text=The+Wedding+of+Arvinth+and+Aarthi&details=The+Wedding+of+Arvinth+and+Aarthi%0A%0ADate:+20+April+2025%0ALocation:+1188/3+Balamurugan+A/C+Mahal+Trichy+main+road,+new+bustand,+near+near,+Viluppuram,+Tamil+Nadu+605403%0ATime:+09:00+AM+-+10:30+AM+IST&dates=20260420T090000/20260420T103000&location=https://maps.app.goo.gl/tyBKC51ygjzR4x8J8"
-            >
-              <i class="fa-solid fa-calendar-check me-2"></i>Save The Date
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div
-      class="modal fade"
-      id="modal-image"
-      tabindex="-1"
-      aria-labelledby="modalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <img
-            id="show-modal-image"
-            style="border-radius: 5px"
-            src=""
-            alt="Preview"
-            class="img-fluid"
-          />
-        </div>
-      </div>
-    </div>
-
-    <!-- <img src="./assets/images/main.jpg" alt="bg" onclick="modal(this)" class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto"> -->
-    <!-- =============== music ===============-->
-    <!-- <div class="music">
-        <audio autoplay controls src="./assets/mp3/song.mp3" id="my_audio" loop="loop"></audio>
-     </div>
-
-    <button type="button" id="button-music" style="display: block;" class="btn bg-dark border btn-sm rounded-circle btn-music position-fixed" data-url="./assets/music/sound.mp3" offline-disabled>
-        <i class="fa-solid fa-circle-pause spin-button"></i>
-    </button> -->
-
-    <section class="text-center px-2 brideAndGroomSection" id="bride">
-      <div class="header-bg text-center">
-        <h2
-          class="font-esthetic py-2 home_txt uk-heading-line mt-5"
-          style="font-size: 2rem"
-        >
-          Bride & Groom
-        </h2>
-      </div>
-      <div class="overflow-x-hidden pb-4">
-        <div class="rahul">
-          <img
-            src="./assets/images/groom.jpg"
-            alt="cowo"
-            class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto"
-          />
-          <h2 class="font-esthetic m-0" style="font-size: 2.5rem">K. Arvinth</h2>
-          <p class="mt-3 mb-1" style="font-size: 1rem">
-            Son of Mr. & Mrs. Kumar and Gangadevi
-          </p>
-        </div>
-
-        <h2 class="font-esthetic my-4 home_txt" style="font-size: 4rem">
-          &amp;
-        </h2>
-
-        <div class="pranjal">
-          <img
-            src="./assets/images/bride.jpg"
-            alt="cewe"
-            class="img-center-crop rounded-circle border border-3 border-light shadow my-4 mx-auto"
-          />
-          <h2 class="font-esthetic m-0" style="font-size: 2.5rem">V. Aarthi</h2>
-          <p class="mt-3 mb-1" style="font-size: 1rem">
-            Daughter of Mr. & Mrs. Vijayan and Gomadhi
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <div class="venueDetails">
-      <div class="text-center">
-        <h2 class="font-esthetic py-2 home_txt" style="font-size: 2rem">
-          Venue Details
-        </h2>
-      </div>
-      <div
-        class="bg-theme-dark mt-4 p-3 shadow rounded-4 text-center home__bottom venueContainer"
-      >
-        <div class="py-2">
-          <div class="overflow-x-hidden">
-            <div class="py-2" data-aos="fade-left">
-              <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem">
-                Reception
-              </h2>
-              <p style="font-size: 0.95rem">
-                Balamurugan A/C Marriage Hall
-              </p>
-              <p><i class="fa-regular fa-clock"></i>&nbsp;6:30 AM</p>
-              <p>
-                <i class="fa-solid fa-calendar-days"></i>&nbsp;19 April 2026
-              </p>
-              <small class="d-block my-1"
-                >WFHJ+4W Viluppuram, Tamil Nadu
-                605403</small
-              >
-              <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3797.258138356181!2d79.47836460000002!3d11.927862300000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a535702ce4fe811%3A0xca07d5575a4256f0!2sBalamurugan%20Magal!5e1!3m2!1sen!2sin!4v1768632461653!5m2!1sen!2sin" 
-                width="300"
-                height="250"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-              <br /><a
-                href="https://maps.app.goo.gl/XNyAmjbGjYcx2ABG8"
-                target="_blank"
-                class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3 mt-3 view-map-btn"
-                ><i class="fa-solid fa-map-location-dot me-2"></i>View Google
-                Maps</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="bg-theme-dark mt-4 p-3 shadow rounded-4 text-center home__bottom venueContainer"
-      >
-        <div class="py-2">
-          <div class="overflow-x-hidden">
-            <div class="py-2" data-aos="fade-left">
-              <h2 class="font-esthetic m-0 py-2" style="font-size: 2rem">
-                Wedding
-              </h2>
-              <p style="font-size: 0.95rem">
-                Balamurugan A/C Marriage Hall
-              </p>
-              <p><i class="fa-regular fa-clock"></i>&nbsp;09:30 - 11.00 AM</p>
-              <p>
-                <i class="fa-solid fa-calendar-days"></i>&nbsp;20th April 2025
-              </p>
-              <small class="d-block my-1"
-                >WFHJ+4W Viluppuram, Tamil Nadu
-                605403</small
-              >
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3797.258138356181!2d79.47836460000002!3d11.927862300000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a535702ce4fe811%3A0xca07d5575a4256f0!2sBalamurugan%20Magal!5e1!3m2!1sen!2sin!4v1768632461653!5m2!1sen!2sin" 
-                width="300"
-                height="250"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-              <br /><a
-                href="https://maps.app.goo.gl/XNyAmjbGjYcx2ABG8"
-                target="_blank"
-                class="btn btn-outline-light btn-sm rounded-pill shadow mb-2 px-3 mt-3 view-map-btn"
-                ><i class="fa-solid fa-map-location-dot me-2"></i>View Google
-                Maps</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="bottomSection text-center">
-      <!--=============== time ===============-->
-      <div class="timerContainer">
-        <h3
-          class="font-esthetic py-4 m-0 home_txt timer-title"
-          style="font-size: 2rem"
-        >
-          Our big day is almost here
-        </h3>
-        <p class="home_txt timer-title">On Monday 20th April</p>
-        <div
-          style="justify-content: center; display: flex; align-items: center"
-        >
-          <div class="rounded-pill shadow py-2 px-4 mt-2 mb-4 timer home_txt">
-            <div
-              class="row justify-content-center home__bottom timer"
-              data-time="2026-04-20 09:30:00"
-              id="count-down"
-            >
-              <div class="col-3 p-1">
-                <h2 class="d-inline m-0 p-0" id="day">0</h2>
-                <small class="ms-1 me-0 my-0 p-0 d-inline">Day </small>
-              </div>
-              <div class="col-3 p-1">
-                <h2 class="d-inline m-0 p-0" id="hour">0</h2>
-                <small class="ms-1 me-0 my-0 p-0 d-inline"> hr</small>
-              </div>
-              <div class="col-3 p-1">
-                <h2 class="d-inline m-0 p-0" id="minute">0</h2>
-                <small class="ms-1 me-0 my-0 p-0 d-inline">min</small>
-              </div>
-              <div class="col-3 p-1">
-                <h2 class="d-inline m-0 p-0" id="second">0</h2>
-                <small class="ms-1 me-0 my-0 p-0 d-inline">sec</small>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!--=============== CTA ===============-->
-      <div></div>
-      <p class="CTA">
-        Can't wait to celebrate auspicious moment of our family with you! <br />
-        <span></span>
-      </p>
-      <div style="justify-content: center; display: flex; align-items: center">
-        <div class="gifSection tile__img">
-          <img class="tile__img" src="./assets/img/ggg.gif" alt="" />
-        </div>
-      </div>
-      <p class="footer">
-        With the divine grace of the almighty, I cordially invite you and your
-        family to my elder brother's wedding I'd eagerly await your kind
-        presence in auspicious occasion of my family.
-      </p>
-      <!--=============== happiness ===============-->
-      <div class="happiness">
-        <span class="dance-med">Join us in our happiness!</span>
-        <!-- <div class="socials">
-         <a class="social__links" target="_blank" href=""><i class='bx bx-md bxl-pinterest-alt'></i></a>
-         <a class="social__links" target="_blank" href=""><i class='bx bx-md bxl-twitter'></i></a>
-         <a class="social__links" target="_blank" href=""><i class='bx bx-md bxl-instagram-alt'></i></a>
-      </div> -->
-      </div>
-
-      <!--=============== bottom ===============-->
-      <div class="footer">
-        <!-- <p>Built with love by <a href="" target="_blank">
-            <span>Prabir</span></a></p> -->
-      </div>
-    </div>
-
-    <!--=============== javascripts ===============-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.16/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.16/dist/js/uikit-icons.min.js"></script>
-    <!-- animation js  -->
-    <script src="https://unpkg.com/split-type"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
-      integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"
-      integrity="sha512-tHvUcUQYi35zApvAa5TNR3fNhBQkVtkmWKfacnpxmix4/VTGz1lGjIVyLMp7gLgAvg+aKJjnVKokXJNS5GZ+/g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="./js/scrollreveal.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/script.js"></script>
-    <script src="./js/joiner.js"></script>
+    <p>Coming Soon...</p>
   </body>
 
   <!--
